init comm with changes

--- a/src/app/dashboard/dashboardmenu.html
+++ b/src/app/dashboard/dashboardmenu.html
@@ -133,6 +133,9 @@
                                             <a href=""><i class="fa fa-eye"></i> <label translate>View All</label></a>
                                         </div>
                                     </ul>
+                                    
+                                </li>
+                                <li class="text-right"> <a (click)="changeMenu('left')">Left</a>&nbsp; | &nbsp;<a (click)="changeMenu('right')">Right</a>
                                 </li>
                             </ul>
                         </div>
