--- a/src/app/dashboard/settings/settingsmenu.html
+++ b/src/app/dashboard/settings/settingsmenu.html
@@ -134,6 +134,8 @@
                                     </div>
                                 </ul>
                             </li>
+                            <li>                <a (click)="changeMenu('left')">Left</a>&nbsp; | &nbsp;<a (click)="changeMenu('right')">Right</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
