--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -22,7 +22,7 @@
         <div class="right_sec right">
             <div class="container-fluid">
                 <div class="logo">
-                    <a href="#"><img src="/assets/images/logo.png" alt="" /></a>
+                    <a href="#"><img src="kleveronv1.0/assets/images/logo.png" alt="" /></a>
                 </div>
                 <div class="welcome_txt">
                     <h2>
@@ -39,17 +39,17 @@
                         <input [formControl]="username" type="text" name="username" id="username" class="username" placeholder="{{'Username' | translate}}" [(ngModel)]="uname">
                     </div>
                             </div>
-                            <div class="form-group row" [ngClass]="{'has-error': (!password.valid && password.touched), 'has-success': (password.valid && password.touched)}">
+                            <div class="form-group row" [ngClass]="{'has-error': (!password.valid && password.touched), 'has-success': (password.valid && password.touched)}">                            
                     <div class="field">
                         <input [formControl]="password" type="password" name="password" id="password" class="password" placeholder="{{'Password' | translate}}" [(ngModel)]="pass">
                     </div>
-                            </div>
-
+                            </div>       
+                    
                     <div class="sign_in">
                         <span class="frgt_pwd left"><a href="#"><label translate>Forgot Password</label></a></span>
                         <span class="btn_sign_in right">
                             <button type="submit" [disabled]="!form.valid" class="btn sign_in_btn" routerLink="/dash/dashboard">
-
+                            
                                 <label>
                                     <span translate>Sign In</span><span class="sign_in_img">
                                         <img src="/assets/images/login/sign-in-img.png" />
@@ -58,7 +58,7 @@
                             </button>
 
                         </span>
-
+                        
                         <div class="clearfix"></div>
                     </div>
                     </form>
