commit after dynamic manu draft

--- a/src/app/dashboard/dashboardmenu.html
+++ b/src/app/dashboard/dashboardmenu.html
@@ -135,13 +135,14 @@
                                     </ul>
                                     
                                 </li>
-                                <li class="text-right"> <a (click)="changeMenu('left')">Left</a>&nbsp; | &nbsp;<a (click)="changeMenu('right')">Right</a>
-                                </li>
+                               
                             </ul>
                         </div>
                     </div>
                 </div>
             </header>
+<right-menu-toggle></right-menu-toggle>
+
         </div>
         <router-outlet></router-outlet>
     </div>
