--- a/src/app/dashboard/settings/settingsmenu.html
+++ b/src/app/dashboard/settings/settingsmenu.html
@@ -141,6 +141,7 @@
                 </div>
             </div>
         </header>
+        <right-menu-toggle></right-menu-toggle>
     </div>
     <router-outlet></router-outlet>
 </div>
