--- a/src/app/createPage/createPageMenu.html
+++ b/src/app/createPage/createPageMenu.html
@@ -18,7 +18,7 @@
                         </li>
                         <li class="active">
                             <!--#control_Modal-->
-                            <a href="admin-panel.html">
+                            <a routerLink="/createPage/createPageMenu">
                                 <img src="/assets/images/settings/Job-postings.png" class="icon-img" />
                                 <span>
                                     <label>
@@ -30,7 +30,7 @@
                         </li>
                         <li>
                             <!--#control_Modal-->
-                            <a href="admin-input-master.html">
+                            <a routerLink="/adminInputMaster">
                                 <img src="/assets/images/settings/Job-postings.png" class="icon-img" />
                                 <span>
                                     <label>
@@ -41,7 +41,7 @@
 
                         </li>
                         <li>
-                            <a href="#" data-toggle="modal" data-target="#list_Modal">
+                            <a routerLink="/adminListMaster">
                                 <img src="/assets/images/settings/Job-postings.png" class="icon-img" />
                                 <span>
                                     <label>
@@ -51,7 +51,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#" data-toggle="modal" data-target="#grid_Modal">
+                            <a routerLink="/adminGridMaster">
                                 <img src="/assets/images/settings/Job-postings.png" class="icon-img" />
                                 <span>
                                     <label>
@@ -76,6 +76,7 @@
                     <div class="col-xs-4 text_center mob_head">
                         <h1><label>Admin Panel</label></h1>
                     </div>
+                    <right-menu-toggle></right-menu-toggle>
                     <div class="col-sm-4">
                         <div class="header-rightside">
                             <ul class="list-inline header-top pull-right navbar-right">
@@ -155,8 +156,8 @@
                                     </ul>
                                     
                                 </li>
-                                <li>                <a (click)="changeMenu('left')">Left</a>&nbsp; | &nbsp;<a (click)="changeMenu('right')">Right</a>
-                                </li>
+                                <!-- <li>                <a (click)="changeMenu('left')">Left</a>&nbsp; | &nbsp;<a (click)="changeMenu('right')">Right</a>
+                                </li> -->
                             </ul>
                         </div>
                     </div>
@@ -164,11 +165,10 @@
                 
             </header>
        
-        
-            <div id="displayControls" class="row page_content admin_onboard">
+            
+                         
                 
 <router-outlet></router-outlet>
-            </div>
                 
         </div>
 
