--- a/src/app/menuToggle/menuToggle.component.html
+++ b/src/app/menuToggle/menuToggle.component.html
@@ -1,7 +1,7 @@
 <div id="thm_select_box" class="thm_select">
         <ul id="thm_tab">
             <li>
-                <img id="tgl_icn" (click)="toggle('thm_select_box');" src="/assets/images/toggle.png">
+                <img id="tgl_icn" (click)="toggle('thm_select_box');" src="./assets/images/toggle.png">
             </li>
         </ul>
         <div id="thm_control">
