--- a/src/app/dashboard/dashboardmenu.html
+++ b/src/app/dashboard/dashboardmenu.html
@@ -2,7 +2,7 @@
     <div class="wrapper">
         <div class="aside left">
             <div class="dash_logo">
-                <a href="#"><img src="/assets/images/settings/logo_dashboard.png" alt="kleveron" /></a>
+                <a href="#"><img id="logo_img" src="/assets/images/settings/logo_dashboard.png" alt="kleveron" /></a>
             </div>
             <div class="aside_nav">
                 <div class="sidebar-menu">
