--- a/src/app/dashboardrec/dashrec.component.html
+++ b/src/app/dashboardrec/dashrec.component.html
@@ -8,7 +8,7 @@
 <div class="dash_wrapper">
         <div class="dash_menubar left">
             <div class="dash_logo">
-                <a href="#"><img src="/assets/images/settings/logo_dashboard.png" alt="kleveron" /></a>
+                <a href="#"><img id="logo_img" src="/assets/images/settings/logo_dashboard.png" alt="kleveron" /></a>
             </div>
 
             <div class="dash_menu_nav">
