--- a/src/app/menuToggle/menuToggle.component.html
+++ b/src/app/menuToggle/menuToggle.component.html
@@ -8,6 +8,8 @@
             <div id="thm_para">
                 <div class="tgl_menu"><a (click)="changeMenu('left')">Left Menu</a></div>
                 <div class="tgl_menu"><a (click)="changeMenu('right')">Right Menu</a></div>
+                <div class="tgl_menu"><a (click)="changeColor('pink-blue')">Pink_Blue Theme</a></div>
+                <div class="tgl_menu"><a (click)="changeColor('normal')">Orange_Blue Theme</a></div>
             </div>
         </div>
     </div>
