--- a/src/app/createPage/createPageMenu.html
+++ b/src/app/createPage/createPageMenu.html
@@ -3,7 +3,7 @@
         <div class="aside left">
             <div class="dash_logo">
                 <a href="#">
-                    <img src="/assets/images/settings/logo_dashboard.png" alt="kleveron" />
+                    <img id="logo_img" src="/assets/images/settings/logo_dashboard.png" alt="kleveron" />
                 </a>
             </div>
             <div class="aside_nav">
