--- a/src/assets/styles/left-menu.css
+++ b/src/assets/styles/left-menu.css
@@ -1,53 +1,52 @@
-﻿.aside {
-    right: 0;
-}
-
-.content_wrap {
-    padding-right: 270px;
-}
-
-.hidemenu .content_wrap {
-    padding-right: 0px;
-}
-
-.frame_header {
-    right: 270px;
+﻿
+.aside {
     left: 0;
 }
 
-.hidemenu .frame_header {
+.content_wrap {
+    padding-left: 270px;
+}
+
+.hidemenu .content_wrap {
+    padding-left: 0px;
+}
+
+.frame_header {
+    left: 270px;
     right: 0;
 }
 
+.hidemenu .frame_header {
+    left: 0;
+}
+
 footer {
-    margin-left: 0;
-    margin-right: 270px;
+    margin-right: 0;
+    margin-left: 270px;
 }
 
 .hidemenu footer {
-    margin-right: 0;
+    margin-left: 0;
 }
 
 @media screen and (max-width: 991px) {
     .content_wrap {
-        padding-right: 0px;
+        padding-left: 0px;
     }
 
     .hidemenu .bgwhite {
-        padding-right: 15px;
         padding-left: 15px;
+        padding-right: 15px;
     }
 
     .frame_header {
-        right: 0;
+        left: 0;
     }
 
     footer {
-        margin-right: 0;
-       
+        margin-left: 0;
     }
     .hidemenu footer {
-        margin-right: 0px;
+        margin-left:0px;
     }
-
 }
